Implement DIP with ServiceFactory, ISP for IApplicationservice into student and staff specific, SRP companyrepstats breakdown